Fix overflowing text in description modal

--- a/src/components/ICal.scss
+++ b/src/components/ICal.scss
@@ -4,5 +4,5 @@
 }
 
 .p-with-newlines {
-  white-space: pre
+  white-space: pre-wrap
 }
